--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,5 +1,11 @@
 version: 2
 updates:
+- package-ecosystem: docker
+  directory: "/dpl-platform-poc/tools/dplsh"
+  schedule:
+    interval: daily
+    time: '04:00'
+  open-pull-requests-limit: 10
 - package-ecosystem: terraform
   directory: "infrastructure/app-environments"
   schedule:
