--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,6 +12,12 @@ updates:
     interval: daily
     time: '04:00'
   open-pull-requests-limit: 10
+- package-ecosystem: docker
+  directory: "dpl-platform-poc/tools/plantuml"
+  schedule:
+    interval: daily
+    time: '04:00'
+  open-pull-requests-limit: 10
 - package-ecosystem: terraform
   directory: "infrastructure/app-environments"
   schedule:
