--- a/.github/workflows/dplsh-build-release.yaml
+++ b/.github/workflows/dplsh-build-release.yaml
@@ -52,3 +52,8 @@ jobs:
           docker push ${{env.image-url}}:$IMAGE_VERSION
           docker push ${{env.image-url}}:latest
         fi
+    - name: Create release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
