--- a/infrastructure/terraform/alpha/poc02/tasks/manifests/cert-manager-resources.yml
+++ b/infrastructure/terraform/alpha/poc02/tasks/manifests/cert-manager-resources.yml
@@ -14,3 +14,15 @@ spec:
     - http01:
        ingress:
          class: nginx
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: miniapi-staging
+  namespace: mini-api
+spec:
+  secretName: miniapi-staging-certificate
+  issuerRef:
+    name: letsencrypt-staging
+  dnsNames:
+  - mikcluster.reload.dk
