--- a/infrastructure/terraform/alpha/poc02/tasks/manifests/hello-world-ingress.yaml
+++ b/infrastructure/terraform/alpha/poc02/tasks/manifests/hello-world-ingress.yaml
@@ -5,9 +5,10 @@ metadata:
   namespace: ingress-basic
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/issuer: "letsencrypt-prod"
 spec:
   rules:
   - http:
@@ -33,25 +34,4 @@ spec:
             name: aks-helloworld-one
             port:
               number: 80
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: hello-world-ingress-static
-  namespace: ingress-basic
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
-spec:
-  rules:
-  - http:
-      paths:
-      - path:
-        pathType: Prefix
-        backend:
-          service:
-            name: aks-helloworld-one
-            port: 
-              number: 80
-        path: /static(/|$)(.*)
+
