Adding helm to dplsh docker images for provisioning k8s resources

--- a/tools/dplsh/Dockerfile
+++ b/tools/dplsh/Dockerfile
@@ -3,14 +3,18 @@
 ARG AZURE_CLI_TAG=latest
 ARG DPLSH_BUILD_VERSION=latest
 
+
 # We use the official azure cli as a base-image. It is itself based on alpine
 # and is quite minimal.
 FROM mcr.microsoft.com/azure-cli:$AZURE_CLI_TAG
 ARG TASK_VERSION=v3.0.0
 ARG TERRAFORM_RELEASE=0.15.1
+ARG HELM_VERSION=canary
+ARG HELM_BASE_URL="https://storage.googleapis.com/kubernetes-helm"
+ARG HELM_TAR_FILE="helm-${HELM_VERSION}-linux-amd64.tar.gz"
 LABEL org.opencontainers.image.source https://github.com/reload/dpl-platform-poc
 
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+SHELL ["/bin/bash", "-ox", "pipefail", "-c"]
 WORKDIR /tmp
 
 # TODO - this will install the latest version - we should pin to the version we
@@ -28,10 +32,21 @@ RUN apk add --no-cache \
 RUN curl -sL https://taskfile.dev/install.sh | bash -s -- -b /usr/local/bin ${TASK_VERSION}
 
 WORKDIR /tmp
+
+# Add Terraform
 RUN curl -O https://releases.hashicorp.com/terraform/${TERRAFORM_RELEASE}/terraform_${TERRAFORM_RELEASE}_linux_amd64.zip \
   && unzip terraform_${TERRAFORM_RELEASE}_linux_amd64.zip \
   && mv terraform /usr/bin \
   && rm terraform_${TERRAFORM_RELEASE}_linux_amd64.zip
+
+# Add Helm
+RUN apk add --update --no-cache curl ca-certificates wget && \
+    curl -L ${HELM_BASE_URL}/${HELM_TAR_FILE} | tar xvz && \
+    mv linux-amd64/helm /usr/bin/helm && \
+    chmod +x /usr/bin/helm && \
+    rm -rf linux-amd64 && \
+    apk del curl && \
+    rm -f /var/cache/apk/*
 
 # Create a dplsh user and switch to it to avoid running the shell as root
 RUN adduser -D --shell /bin/bash dplsh
