Make it possible to run dplsh non-interactive

--- a/tools/dplsh/Taskfile.yml
+++ b/tools/dplsh/Taskfile.yml
@@ -21,6 +21,7 @@ tasks:
   test:
     env:
       DPLSH_IMAGE: "{{.image}}"
+      DPLSH_NON_INTERACTIVE: "true"
     cmds:
       - ./dplsh.sh terraform -version
       - ./dplsh.sh helm version
