--- a/infrastructure/terraform/alpha/poc02/tasks/manifests/cert-manager-issuer-staging.yml
+++ b/infrastructure/terraform/alpha/poc02/tasks/manifests/cert-manager-issuer-staging.yml
@@ -7,22 +7,10 @@ spec:
   acme:
     # Staging API
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: yourname@email.com
+    email: mikkel@reload.dk
     privateKeySecretRef:
       name: account-key-staging
     solvers:
     - http01:
        ingress:
          class: nginx
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: miniapi-staging
-  namespace: mini-api
-spec:
-  secretName: miniapi-staging-certificate
-  issuerRef:
-    name: letsencrypt-staging
-  dnsNames:
-  - mikkel.ddf.reload.dk
