--- a/infrastructure/terraform/alpha/poc02/tasks/Ingress.yml
+++ b/infrastructure/terraform/alpha/poc02/tasks/Ingress.yml
@@ -1,11 +1,12 @@
 version: '3'
 
 tasks:
-  create:
+  install:
     cmds:
       # Create ingress namespace if it does not exist.
       - kubectl create namespace ingress-basic --dry-run=client -o yaml | kubectl apply -f -
       # Install Ingress.
       - ./scripts/helmInstallnginxIngress.sh
-      # Install cert-manager.
-      - ./scripts/helmInstallCertManager.sh
+  setup:
+    cmds:
+      - task: install
