--- a/infrastructure/terraform/alpha/poc02/tasks/manifests/aks-helloworld-two.yaml
+++ b/infrastructure/terraform/alpha/poc02/tasks/manifests/aks-helloworld-two.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aks-helloworld-two  
+  name: aks-helloworld-two
+  namespace: mini-api
 spec:
   replicas: 1
   selector:
