--- a/infrastructure/terraform/alpha/poc02/tasks/manifests/hello-world-ingress.yaml
+++ b/infrastructure/terraform/alpha/poc02/tasks/manifests/hello-world-ingress.yaml
@@ -8,10 +8,11 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
 spec:
   rules:
-  - http:
+  - host: mikkel.ddf.reload.dk
+    http:
       paths:
       - path: /hello-world-one(/|$)(.*)
         pathType: Prefix
@@ -34,4 +35,7 @@ spec:
             name: aks-helloworld-one
             port:
               number: 80
-
+  tls: # < placing a host in the TLS config will indicate a certificate should be created
+  - hosts:
+    - mikkel.ddf.reload.dk
+    secretName: tls-production # < cert-manager will store the created certificate in this secret.
