Big moving day. Putting all tasks in a task dir and all manifests and scripts in their own dir in the root

--- a/infrastructure/terraform/alpha/poc02/tasks/Ingress.task.yml
+++ b/infrastructure/terraform/alpha/poc02/tasks/Ingress.task.yml
@@ -6,7 +6,7 @@ tasks:
       # Create ingress namespace if it does not exist.
       - kubectl create namespace ingress-basic --dry-run=client -o yaml | kubectl apply -f -
       # Install Ingress.
-      - ./scripts/helmInstallnginxIngress.sh
+      - ../scripts/helmInstallnginxIngress.sh
   setup:
     cmds:
       - task: install
