Certificate issuing in a working state. Don't touch ;)

--- a/infrastructure/terraform/alpha/poc02/tasks/Taskfile.yml
+++ b/infrastructure/terraform/alpha/poc02/tasks/Taskfile.yml
@@ -6,6 +6,9 @@ includes:
   demo-apps: ./DemoApplications.task.yml
 
 tasks:
+  build-cluster:
+    cmds:
+      - terraform apply
   setup-ingress:
     cmds:
       - task: mount-ak
