--- a/infrastructure/terraform/alpha/poc02/manifests/cert-manager-issuer-production.yml
+++ b/infrastructure/terraform/alpha/poc02/manifests/cert-manager-issuer-production.yml
@@ -4,11 +4,11 @@ metadata:
   name: letsencrypt-prod
 spec:
   acme:
-    # Staging API
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    # Production API
+    server: https://acme-v02.api.letsencrypt.org/directory
     email: mikkel@reload.dk
     privateKeySecretRef:
-      name: account-key-prod
+      name: tls-production
     solvers:
     - http01:
        ingress:
