--- a/infrastructure/terraform/alpha/poc02/manifests/hello-world-ingress.yaml
+++ b/infrastructure/terraform/alpha/poc02/manifests/hello-world-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   rules:
   - host: mikkel.ddf.reload.dk
