--- a/infrastructure/terraform/alpha/poc02/task_modules/Ingress/Taskfile.yml
+++ b/infrastructure/terraform/alpha/poc02/task_modules/Ingress/Taskfile.yml
@@ -1,12 +1,16 @@
 version: '3'
 
+env:
+  MODULE_DIR:
+    sh: echo $TASK_MODULES_DIR/Ingress
+
 tasks:
   install:
     cmds:
       # Create ingress namespace if it does not exist.
       - kubectl create namespace ingress-basic --dry-run=client -o yaml | kubectl apply -f -
       # Install Ingress.
-      - ../scripts/helmInstallnginxIngress.sh
+      - $MODULE_DIR/scripts/helmInstallnginxIngress.sh
   setup:
     cmds:
       - task: install
