--- a/infrastructure/terraform/alpha/poc02/task_modules/Ingress/Taskfile.yml
+++ b/infrastructure/terraform/alpha/poc02/task_modules/Ingress/Taskfile.yml
@@ -1,16 +1,16 @@
 version: '3'
 
-env:
-  MODULE_DIR:
-    sh: echo $TASK_MODULES_DIR/Ingress
-
 tasks:
-  install:
+  kube:create:ns:
     cmds:
       # Create ingress namespace if it does not exist.
       - kubectl create namespace ingress-basic --dry-run=client -o yaml | kubectl apply -f -
+  install:
+    dir: "$TASK_MODULES_DIR/Ingress"
+    deps: [kube:create:ns]
+    cmds:
       # Install Ingress.
-      - $MODULE_DIR/scripts/helmInstallnginxIngress.sh
+      - ./scripts/helmInstallnginxIngress.sh
   setup:
     cmds:
       - task: install
