--- a/infrastructure/terraform/alpha/poc02/Taskfile.yml
+++ b/infrastructure/terraform/alpha/poc02/Taskfile.yml
@@ -12,18 +12,18 @@ includes:
 tasks:
 
   # Build Azure kluster infrastructure.
-  build-cluster:
+  infrastructure:build:
     cmds:
       - terraform apply
 
   # Tear down aks cluster
-  destroy-cluster:
+  infrastructure:destroy:
     cmds:
       - terraform destroy
 
   # Installs ingress and cert manager.
-  setup-ingress:
-    deps: [mount-ak]
+  ingress:setup:
+    deps: [aks:mount]
     cmds:
       # Setup Ingress.
       - task: ingress:setup
@@ -31,28 +31,28 @@ tasks:
       - task: cert-manager:setup
  
   # Installs demo applications.
-  setup-demo-apps:
-    deps: [mount-ak]
+  demo-apps:setup:
+    deps: [aks:mount]
     cmds:
       - task: demo-apps:install
  
  # Adds Loki logging.
-  setup-logging:
-    deps: [mount-ak]
+  logging:setup:
+    deps: [aks:mount]
     cmds:
       - task: logging:setup
  
  # Authenticates to aks cluster.
-  mount-ak:
+  aks:mount:
     cmds:
       - az aks get-credentials --resource-group {{.workspace}}-rg --name {{.workspace}}-cluster
  
   # Main task for running the whole show.
   setup:
     deps:
-      - build-cluster
+      - infrastructure:build
     cmds:
-      - task: mount-ak
-      - task: setup-ingress
-      - task: setup-logging
-      - task: setup-demo-apps
+      - task: aks:mount
+      - task: ingress:setup
+      - task: logging:setup
+      - task: demo-apps:setup
