--- a/infrastructure/terraform/alpha/poc02/task_modules/DemoApplications/Taskfile.yml
+++ b/infrastructure/terraform/alpha/poc02/task_modules/DemoApplications/Taskfile.yml
@@ -2,9 +2,9 @@ version: '3'
 
 tasks:
   install:
+    desc: Installs demo application deployments and ingress resource.
     dir: "$TASK_MODULES_DIR/DemoApplications"
     cmds:
-      # Install demo application deployments and ingress resource.
       - kubectl apply -f ./manifests/aks-helloworld-one.yaml -n ingress-basic
       - kubectl apply -f ./manifests/aks-helloworld-two.yaml -n ingress-basic
       - kubectl apply -f ./manifests/hello-world-ingress.yaml
