--- a/infrastructure/terraform/alpha/poc02/task_modules/Ingress/Taskfile.yml
+++ b/infrastructure/terraform/alpha/poc02/task_modules/Ingress/Taskfile.yml
@@ -2,15 +2,18 @@ version: '3'
 
 tasks:
   kube:create:ns:
+    desc: Creates ingress namespace if it does not exist.
     cmds:
-      # Create ingress namespace if it does not exist.
       - kubectl create namespace ingress-basic --dry-run=client -o yaml | kubectl apply -f -
+ 
   install:
+    desc: Installs Ingress.
     dir: "$TASK_MODULES_DIR/Ingress"
     deps: [kube:create:ns]
     cmds:
-      # Install Ingress.
       - ./scripts/helmInstallnginxIngress.sh
+      
   setup:
+    desc: Setting up everything releated to Ingress.
     cmds:
       - task: install
