Fixing dependabot configuration - wrong path

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,13 +7,13 @@ updates:
     time: '04:00'
   open-pull-requests-limit: 10
 - package-ecosystem: docker
-  directory: "/dpl-platform-poc/tools/dplsh"
+  directory: "tools/dplsh"
   schedule:
     interval: daily
     time: '04:00'
   open-pull-requests-limit: 10
 - package-ecosystem: docker
-  directory: "dpl-platform-poc/tools/plantuml"
+  directory: "tools/plantuml"
   schedule:
     interval: daily
     time: '04:00'
