--- a/infrastructure/terraform/alpha/lag01/Taskfile.yml
+++ b/infrastructure/terraform/alpha/lag01/Taskfile.yml
@@ -21,6 +21,11 @@ includes:
     dir: ./tasks/lagoon
 
 tasks:
+  d:
+    desc: Decode base64 strings
+    cmds:
+      - echo {{.CLI_ARGS}} | base64 -d  
+
   aks:auth:
     desc: Authenticates to aks cluster.
     status:
