Use slim-sprig instead of base64 cmd

--- a/infrastructure/terraform/alpha/lag01/Taskfile.yml
+++ b/infrastructure/terraform/alpha/lag01/Taskfile.yml
@@ -24,7 +24,7 @@ tasks:
   d:
     desc: Decode base64 strings
     cmds:
-      - echo {{.CLI_ARGS}} | base64 -d  
+      - echo {{ .CLI_ARGS | b64dec }}
 
   aks:auth:
     desc: Authenticates to aks cluster.
